# neo4j_rag

./: .env  .gitignore  config.py  custom_embedder.py  docker-compose.yml  document_processor.py  embeddings_manager.py  fix_issue_8.txt  main.py  neo4j_manager.py  neo4j_rag.py  pyproject.toml  rag_facade.py  rag_pipeline.py  setup.py
.github/workflows/: auto_fix.yml  opencode.yml
unstructuredData/: config.py  dspySetup.py  unstructuredMain.py
