[project]
name = "neo4j-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.3.0",
    "langchain-ollama>=0.2.2",
    "langchain-unstructured>=0.1.5",
    "neo4j>=5.27.0",
    "openai>=1.60.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "ruff>=0.9.3",
    "tiktoken>=0.8.0",
    "unstructured>=0.14.8",
    "yfiles-jupyter-graphs>=1.10.1",
]
